# AFL-automation

./: '  .gitignore  .gitmodules  AGENTS.md  DEPLOY.md  README.md  RobotServer.py  Sample.py  docker-compose.yml  env.yml  env_agent.yml  index.html  pkgs.txt  pyproject.toml  requirements-all.txt  requirements-basic.txt  requirements-docs.txt  requirements-loader.txt  requirements.txt  run_NR.py  run_OT2.py  setup.py  test.html  upload.sh
.github/workflows/: Docs4NIST.yml  piloader-sd.yaml  publish-to-ghcr.yaml  publish-to-pypi.yml  test-integration.yaml  test.yaml
AFL/orchestrator/: OrchestratorDriver.py
Accessories/: VialTray_parameterized.ipt  VialTray_specifynumber.ipt
Accessories/24 x 4 mL glass vial holder/: 24 x 4 mL vial holder.stl
Accessories/8 x 20 mL glass vial holder gen2/: 6x20 gen2.stl
Accessories/OldVersions/: BlockTray_parameterized.0002.ipt  VialTray_parameterized.0001.ipt
Accessories/SANS cell holder/: 2mm_withscrews.stl
NistoRoboto/: Component.py  Deck.py  Exceptions.py  FlowSelector.py  Mixture.py  NE1kSyringePump.py  PipetteAction.py  PushPullSelectorSampleCell.py  RobotoClient.py  RobotoFlaskApp.py  RobotoFlaskKey.py  SerialDevice.py  SyringePump.py  ViciMultiposSelector.py  __init__.py
NistoRoboto/APIServer/: APIServer.py  DeviceServer.py  QueueDaemon.py  webapp.html
NistoRoboto/DeviceServer/: App.py  Client.py  DeviceServer.py  DummyProtocol.py  LoaderProtocol.py  OT2Client.py  OT2Protocol.py  OnePumpNCNR_SampleProtocol.py  OnePumpNICE_SampleProtocol.py  Protocol.py  QueueDaemon.py  SpecScreenProtocol.py  TwoSelOnePumpNICE_SampleProtocol.py
NistoRoboto/EpicsADLiveProcess/: AreaDetectorLive.py  Client.py  CollateDaemon.py  EpicsADLiveProcessDaemon.py  FlaskApp.py  ReduceDaemon.py
NistoRoboto/OT2App/: Client.py  DoorDaemon.py  FlaskApp.py  OT2Daemon.py  OT2Protocol.py
NistoRoboto/agent/: AcquisitionFunction.py  AgentClient.py  GaussianProcess.py  PhaseLabeler.py  PhaseMap.py  SAS_AL_SampleDriver.py  SAS_AgentDriver.py  WatchDog.py
NistoRoboto/componentDB/: __init__.py  component.py  mainview.py  measurement.py  sample.py  sample_stock.py  schema.sql  stock.py  stock_component.py
NistoRoboto/driver/: DummyDriver.py  NICE_SampleDriver.py  OT2_Driver.py  SpecScreen_Driver.py
NistoRoboto/instrument/: CDSAXSLabview.py  CHESSFMBInstrument.py  CHESSID3B.py  DummySAS.py  EPICSDevice.py  PySpecClient.py  RSpecSocketDevice.py  ScatteringInstrument.py  SeabreezeUVVis.py
_includes/: ntd2d_variants.html
deploy/: DEPLOY.md  backup-pis.yaml  install-loader-extras.yaml  setup-afl-python-env.yaml
dev/: 200208_SDS_Salt.ipynb  RobotServer.py  Sample.py  dev.ipynb
docker/: DOCKER_SETUP.md  Dockerfile.agent  Dockerfile.apiserver  Dockerfile.instrument  Dockerfile.mixcalc  Dockerfile.mixing  Dockerfile.orchestrator  Dockerfile.tiled  requirements-common.txt
docs/: build_log.txt  build_output.txt
hardware-designs/: BlockTray_parameterized.ipt  SANSBlockTray_specifynumber.ipt  SANSBlockTray_specifynumber_otherorientation.ipt  connector_pinout.txt
instance/: flaskr.sqlite
launchers/: config.json  roboctl
server_scripts/: APSDNDCAT.py  APSDNDCAT.sh  APSUSAXS.py  APSUSAXS.sh  CDSAXS.py  CHESSID3B.py  CHESSID3B.sh  CastingServer.py  CastingServer.sh  ComponentDB.py  Dummy.py  Dummy_Agent_Testing.py  Dummy_SampleServer_SAS.py  Dummy_SampleServer_SAS.sh  I22.py  I22.sh  ISISLarmor.py  ISISLarmor.sh  LoadStopper.py  LoaderV2.sh  LoaderV2Debug.py  LoaderV2Pneumatic.py  LoaderV2Pneumatic.sh  LoaderV2Pneumatic_CDSAXS.py  LoaderV2Pneumatic_CDSAXS.sh  LoaderV2Syringe.py  OT2.py  OT2.sh  OT2_Dummy.py  OnePump.py  OnePumpCetoni.py  OpticalTurbidity.py  OpticalTurbidity.sh  PneumaticPressureLoader.py  PneumaticPressureLoader.sh  README_SERVER_SCRIPTS  SAS_Agent.py  SAS_Agent.sh  SINQSANS.py  SINQSANS.sh  (+24 more)
static/: addDiv.js  popup.js  queueEditor.js  script.js  servers.js  style.css
test/: Component_Test.py  Mixture_Test.py  conftest.py  test_MixDB.py  test_agent_driver.py  test_apiserver.py  test_apiserver_data.py  test_balance_diagnosis.py  test_biosans_prepare.py  test_component.py  test_driver_webapps_mixin.py  test_driver_webapps_search_sort.py  test_instrument.py  test_massbalance.py  test_massbalance_driver.py  test_massbalance_multistep.py  test_mixdb.py  test_mixing_contexts.py  test_mutable_queue.py  test_optical_turbidity.py  test_orchestrator.py  test_orchestrator_closed_loop.py  test_ot2_http_driver.py  test_ot2_prepare_metadata.py  test_persistentconfig_dbengine.py  test_prepare_driver_multistep.py  test_solution.py  test_tiled.py  test_tiled_browser_integration.py  test_tiled_http_frontend_rewrite.py
tiled/: config.yml
(+3519 files in other folders)
